[gd_scene load_steps=3 format=3 uid="class_selection_scene_1"]

[ext_resource path="res://scripts/ui/class_selection_menu.gd" type="Script" id=1]

[node name="ClassSelectionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Title" type="Label" parent="VBox"]
text = "Выбор класса"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
text = "Вы достигли 10 уровня! Выберите свою специализацию:"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="ClassesContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="VBox"]
text = "Подтвердить выбор"
disabled = true

[node name="CancelButton" type="Button" parent="VBox"]
text = "Выбрать позже"

