extends Control

## –ú–µ–Ω—é –≤—ã–±–æ—Ä–∞ –∫–ª–∞—Å—Å–∞ –Ω–∞ 10 —É—Ä–æ–≤–Ω–µ

@onready var classes_container: HBoxContainer = $VBox/ClassesContainer
@onready var confirm_button: Button = $VBox/ConfirmButton
@onready var cancel_button: Button = $VBox/CancelButton

var selected_class: CharacterClass.Archetype = CharacterClass.Archetype.NONE
var class_widgets: Array[Control] = []

var character_progression: CharacterProgression = null

func _ready() -> void:
	UIThemeManager.apply_theme_to_control(self)
	_setup_background()
	_create_class_widgets()
	
	confirm_button.pressed.connect(_on_confirm_pressed)
	cancel_button.pressed.connect(_on_cancel_pressed)

func _setup_background() -> void:
	var bg := ColorRect.new()
	bg.color = Color(0.05, 0.1, 0.15, 1.0)
	bg.anchor_right = 1.0
	bg.anchor_bottom = 1.0
	bg.mouse_filter = Control.MOUSE_FILTER_IGNORE
	add_child(bg)
	move_child(bg, 0)

func _create_class_widgets() -> void:
	var classes = [
		{
			"archetype": CharacterClass.Archetype.GATHERER,
			"name": "–°–æ–±–∏—Ä–∞—Ç–µ–ª—å",
			"icon": "üîç",
			"description": "–ú–∞—Å—Ç–µ—Ä –¥–æ–±—ã—á–∏ —Ä–µ—Å—É—Ä—Å–æ–≤"
		},
		{
			"archetype": CharacterClass.Archetype.FIGHTER,
			"name": "–ë–æ–µ—Ü",
			"icon": "‚öîÔ∏è",
			"description": "–í–µ–ª–∏–∫–∏–π –≤–æ–∏–Ω –±–ª–∏–∂–Ω–µ–≥–æ –±–æ—è"
		},
		{
			"archetype": CharacterClass.Archetype.RANGER,
			"name": "–°—Ç—Ä–µ–ª–æ–∫",
			"icon": "üèπ",
			"description": "–ú–∞—Å—Ç–µ—Ä –¥–∞–ª—å–Ω–µ–≥–æ –±–æ—è"
		},
		{
			"archetype": CharacterClass.Archetype.SAILOR,
			"name": "–ú–æ—Ä—è–∫",
			"icon": "‚õµ",
			"description": "–ò—Å–∫—É—Å–Ω—ã–π –º–æ—Ä–µ–ø–ª–∞–≤–∞—Ç–µ–ª—å"
		},
		{
			"archetype": CharacterClass.Archetype.ALCHEMIST,
			"name": "–ê–ª—Ö–∏–º–∏–∫",
			"icon": "‚öóÔ∏è",
			"description": "–ú–∞—Å—Ç–µ—Ä –∑–µ–ª–∏–π"
		},
		{
			"archetype": CharacterClass.Archetype.MYSTIC,
			"name": "–ú–∏—Å—Ç–∏–∫",
			"icon": "‚ú®",
			"description": "–í–ª–∞–¥–µ–ª–µ—Ü –º–∞–≥–∏–∏ –æ–∫–µ–∞–Ω–∞"
		},
		{
			"archetype": CharacterClass.Archetype.BUILDER,
			"name": "–°—Ç—Ä–æ–∏—Ç–µ–ª—å",
			"icon": "üèóÔ∏è",
			"description": "–ú–∞—Å—Ç–µ—Ä —Å—Ç—Ä–æ–∏—Ç–µ–ª—å—Å—Ç–≤–∞"
		}
	]
	
	for class_data in classes:
		var widget := _create_class_widget(class_data)
		classes_container.add_child(widget)
		class_widgets.append(widget)

func _create_class_widget(class_data: Dictionary) -> Control:
	var container := VBoxContainer.new()
	container.custom_minimum_size = Vector2(200, 300)
	
	var button := Button.new()
	button.text = "%s\n%s" % [class_data.get("icon", ""), class_data.get("name", "")]
	button.custom_minimum_size = Vector2(180, 100)
	
	var desc_label := Label.new()
	desc_label.text = class_data.get("description", "")
	desc_label.autowrap_mode = TextServer.AUTOWRAP_WORD_SMART
	desc_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	
	container.add_child(button)
	container.add_child(desc_label)
	
	button.pressed.connect(func(): _on_class_selected(class_data.get("archetype", CharacterClass.Archetype.NONE)))
	
	return container

func _on_class_selected(archetype: CharacterClass.Archetype) -> void:
	selected_class = archetype
	confirm_button.disabled = false
	
	# –ü–æ–¥—Å–≤–µ—á–∏–≤–∞–µ–º –≤—ã–±—Ä–∞–Ω–Ω—ã–π –∫–ª–∞—Å—Å
	for widget in class_widgets:
		pass  # TODO: –í–∏–∑—É–∞–ª—å–Ω–∞—è –æ–±—Ä–∞—Ç–Ω–∞—è —Å–≤—è–∑—å

func _on_confirm_pressed() -> void:
	if selected_class == CharacterClass.Archetype.NONE:
		return
	
	if character_progression:
		if character_progression.select_class(selected_class):
			# –ö–ª–∞—Å—Å –≤—ã–±—Ä–∞–Ω, –∑–∞–∫—Ä—ã–≤–∞–µ–º –º–µ–Ω—é
			get_tree().change_scene_to_file("res://scenes/main/world.tscn")
		else:
			print("–û—à–∏–±–∫–∞ –≤—ã–±–æ—Ä–∞ –∫–ª–∞—Å—Å–∞")

func _on_cancel_pressed() -> void:
	# –ú–æ–∂–Ω–æ –≤—ã–±—Ä–∞—Ç—å –ø–æ–∑–∂–µ
	get_tree().change_scene_to_file("res://scenes/main/world.tscn")

